SEO; fix table, responsive
- fixed table being too small
- fixed sidebar responsive css
- changed breakpoint from md to lg

--- a/dependencies/katsute/css/_markdown.scss
+++ b/dependencies/katsute/css/_markdown.scss
@@ -19,6 +19,8 @@
         @extend .table-sm;
         @extend .table-bordered;
 
+        min-width: 500px;
+
         td code { // prevent code blocks from being broken
 
             @extend .text-nowrap;
