--- a/dependencies/katsute/css/_sidebar.scss
+++ b/dependencies/katsute/css/_sidebar.scss
@@ -1,7 +1,5 @@
 .sidebar {
 
-    @extend .d-none;
-    @extend .d-md-block;
     @extend .pb-5;
 
     $width: 250px;
